[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/SetDificulty.gd" type="Script" id=1]
[ext_resource path="res://Font/Toriko_font_32.tres" type="DynamicFont" id=2]

[node name="SetDificulty" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="HUD" type="Control" parent="."]
anchor_bottom = 0.808
margin_right = 1025.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_left = 362.0
margin_top = 141.0
margin_right = 674.0
margin_bottom = 461.0
size_flags_stretch_ratio = 2.37

[node name="VSPlayer" type="Button" parent="HUD/VBoxContainer"]
margin_right = 312.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 2 )
text = "VS Player"

[node name="Easy" type="Button" parent="HUD/VBoxContainer"]
margin_top = 34.0
margin_right = 312.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 2 )
text = "Easy"

[node name="Medium" type="Button" parent="HUD/VBoxContainer"]
margin_top = 68.0
margin_right = 312.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 2 )
text = "Medium"

[node name="Hard" type="Button" parent="HUD/VBoxContainer"]
margin_top = 102.0
margin_right = 312.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 2 )
text = "Hard"

[connection signal="pressed" from="HUD/VBoxContainer/VSPlayer" to="." method="_on_vs_player_pressed"]
[connection signal="pressed" from="HUD/VBoxContainer/Easy" to="." method="_on_Easy_pressed"]
[connection signal="pressed" from="HUD/VBoxContainer/Medium" to="." method="_on_Medium_pressed"]
[connection signal="pressed" from="HUD/VBoxContainer/Hard" to="." method="_on_Hard_pressed"]
